--- a/src/pages/Page5/Page5.scss
+++ b/src/pages/Page5/Page5.scss
@@ -1,18 +1,47 @@
 .page5-container{
   width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  background-color: #588157;
+  background-color: #f5ebe0;
+  color: black;
   box-sizing: border-box;
   padding: 2rem;
 }
 
 .page5-categories{
   display: flex;
+  gap:1rem;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.page5-main-title{
+  font-size: 4rem;
+  margin-bottom: 6rem;
+}
+
+.page5-image{
+  margin-bottom: 2.5rem;
+  text-align: center;
+}
+
+.page5-image img{
+  width: 9rem;
+  height: 9rem;
+}
+
+.page5-title{
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.page5-description{
+  font-size: 1.25rem;
+  text-align: left;
+
 }
