--- a/src/components/Sticker/Sticker.scss
+++ b/src/components/Sticker/Sticker.scss
@@ -1,6 +1,10 @@
 .sticker{
-  width: 100%;
-  height: 100%;
+  width: 150px;
+  height: 150px;
+  position: fixed;
+  top:70vh;
+  left:-2%;
+  z-index: 100;
 }
 
 .sticker img{
