--- a/src/components/Marquee/Sponsors.scss
+++ b/src/components/Marquee/Sponsors.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   font-size: 1.75rem;
   color: black;
   overflow: hidden;
@@ -12,15 +11,16 @@
 
 .marquee-title{
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .marquee-companies{
   display: flex;
   flex-direction: row;
   gap:6rem;
-  padding-left: 4rem;
-  box-sizing: border-box;
   overflow:hidden;
+  margin:0 2rem;
+  box-sizing: border-box;
 }
 
 .marquee-company{
