--- a/src/components/Tree/Tree.scss
+++ b/src/components/Tree/Tree.scss
@@ -1,10 +1,16 @@
 .tree-container{
   display: flex;
   flex-direction: row;
-  height:10rem;
-  width: 100%;
+  gap:1rem;
+  background-color: #588157;
+  padding:0 1rem;
+  overflow: hidden;
 }
 
 .tree-container img{
-  width: 6rem;
+  position: relative;
+  object-fit: fill;
+  height: 100px;
+  top:0.8rem;
+
 }
